--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,8 @@
           tabindex="-1"
           aria-labelledby="newEventModalLabel"
           aria-hidden="true"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
       >
           <div class="modal-dialog" style=" background-color: #f5f5f5"> 
               <div class="modal-content">
@@ -1195,6 +1197,8 @@
             tabindex="-1"
             aria-labelledby="findEventModal"
             aria-hidden="true"
+            data-bs-backdrop="static"
+            data-bs-keyboard="false"
         >
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -1246,8 +1250,10 @@
             tabindex="-1"
             aria-labelledby="eventModals"
             aria-hidden="true"
+            data-bs-backdrop="static"
+            data-bs-keyboard="false"
         >
-            <div class="modal-dialog" id="eventDisplay">
+            <div class="modal-dialog" id="eventDisplay" data-bs-backdrop="static" data-bs-keyboard="false">
                 
             </div>
         </div>
