--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                 <nav class="navbar navbar-expand-lg back" style="background-color: #f5f5f5 !important; padding-bottom: 15px">  
                     <div class="container" >
                     <a></a>
-                    <span class="bal nav-link border btn-light rounded-pill bg-light" style="display: none;">
+                    <span class="bal nav-link border btn-light rounded-pill bg-light">
                         <span id="balance">0</span>
                         cUSD
                     </span>
@@ -100,22 +100,24 @@
         <main style = "width: 100%; max-width: 330px; padding: 15px;
         margin: auto;"> 
           <div>  
-              <a
-              class="btn btn-dark rounded-pill mb-3 fw-normal"
+              <button
+              class="btn btn-dark rounded-pill mb-3 fw-normal btnss"
               data-bs-toggle="modal"
               data-bs-target="#addModal1"
+              disabled
               >
               Create Event
-              </a>
+          </button>
            </div> 
            <div>  
-              <a
-              class="btn btn-dark rounded-pill mb-3 fw-normal"
+              <button
+              class="btn btn-dark rounded-pill mb-3 fw-normal btnss"
               data-bs-toggle="modal"
               data-bs-target="#addModal2"
+              disabled
               >
               Join Event
-              </a>
+           </button>
            </div> 
         </main>
       </div>
@@ -242,7 +244,7 @@
                                   <label class="form-check-label" for="inlineCheckbox3"><i class="fa fa-youtube-play" style="font-size:24px; color:#FF0000;"></i></label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option4" data-r-show-target=".option-4">
+                                  <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4" data-r-show-target=".option-4">
                                   <label class="form-check-label" for="inlineCheckbox4"><i class="fa fa-google" style="font-size:24px; color:#DB4437;"></i></label>
                                 </div>
                               </div>
@@ -1250,10 +1252,10 @@
             tabindex="-1"
             aria-labelledby="eventModals"
             aria-hidden="true"
-            data-bs-backdrop="static"
-            data-bs-keyboard="false"
+            data-backdrop="static"
+            data-keyboard="false"
         >
-            <div class="modal-dialog" id="eventDisplay" data-bs-backdrop="static" data-bs-keyboard="false">
+            <div class="modal-dialog" id="eventDisplay" data-bs-backdrop="static" data-bs-keyboard="false" >
                 
             </div>
         </div>
