--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
         crossorigin="anonymous"/>
 
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
         <link rel="stylesheet" 
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
         />
@@ -284,11 +286,13 @@
                                 </div>
                           </div> 
                           <div class="form-row row">
-                              <div class=" form-floating mb-2 col-6">
-                                  <input type="time" class="form-control" id="newEventStartTime" placeholder="Start Time">
-                                  <label for="newEventStartTime" style="padding-left: 20px !important;">Start Time</label>
+
+                                <div class="form-floating mb-2 col-6">
+                                  <input type="time" id="newEventStartTime" class="form-control" placeholder="Start time">
+                                  <label for="newEventStartTime" style="padding-left: 20px !important; font-size: 15px;">Start Time</label>
                                 </div>
-                                <div class=" form-floating mb-2 col-6">
+
+                                <div class="form-floating mb-2 col-6">
                                   <input type="time" class="form-control" id="newEventEndTime" placeholder="End Time">
                                   <label for="newEventEndTime" style="padding-left: 20px !important; font-size: 15px;">End Time</label>
                                 </div>
@@ -1271,6 +1275,7 @@
         ></script>
         <script src="https://unpkg.com/ethereum-blockies@0.1.1/blockies.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.9.0/mdb.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
     </body>
 
