final final update

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
               data-bs-target="#addModal2"
               disabled
               >
-              Join Event
+              Find Event
            </button>
            </div> 
         </main>
